k8s-dev/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - otmsservice.tk
        - www.otmsservice.tk
      secretName: k8s-multi-com
  rules:
    - host: otmsservice.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 80
          - path: /employee-api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
    - host: www.otmsservice.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 80
          - path: /employee-api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
